Implemented final set of initial endpoint logic